Kaggle Notebook | mcts-catboost-baseline | Version 8

--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c9f867ea",
+   "id": "48a071af",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-13T02:35:08.891157Z",
-     "iopub.status.busy": "2024-11-13T02:35:08.889627Z",
-     "iopub.status.idle": "2024-11-13T02:35:12.429298Z",
-     "shell.execute_reply": "2024-11-13T02:35:12.427872Z"
+     "iopub.execute_input": "2024-11-15T15:22:24.082690Z",
+     "iopub.status.busy": "2024-11-15T15:22:24.081495Z",
+     "iopub.status.idle": "2024-11-15T15:22:27.980339Z",
+     "shell.execute_reply": "2024-11-15T15:22:27.979022Z"
     },
     "papermill": {
-     "duration": 3.54997,
-     "end_time": "2024-11-13T02:35:12.432526",
+     "duration": 3.908513,
+     "end_time": "2024-11-15T15:22:27.983097",
      "exception": false,
-     "start_time": "2024-11-13T02:35:08.882556",
+     "start_time": "2024-11-15T15:22:24.074584",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e393dec9",
+   "id": "bfe06203",
    "metadata": {
     "papermill": {
-     "duration": 0.00409,
-     "end_time": "2024-11-13T02:35:12.441394",
+     "duration": 0.004182,
+     "end_time": "2024-11-15T15:22:27.992094",
      "exception": false,
-     "start_time": "2024-11-13T02:35:12.437304",
+     "start_time": "2024-11-15T15:22:27.987912",
      "status": "completed"
     },
     "tags": []
@@ -70,34 +70,24 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6ae653b2",
+   "id": "2726038d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-13T02:35:12.452329Z",
-     "iopub.status.busy": "2024-11-13T02:35:12.451693Z",
-     "iopub.status.idle": "2024-11-13T02:35:14.679857Z",
-     "shell.execute_reply": "2024-11-13T02:35:14.678482Z"
+     "iopub.execute_input": "2024-11-15T15:22:28.003083Z",
+     "iopub.status.busy": "2024-11-15T15:22:28.002431Z",
+     "iopub.status.idle": "2024-11-15T15:22:34.879304Z",
+     "shell.execute_reply": "2024-11-15T15:22:34.878108Z"
     },
     "papermill": {
-     "duration": 2.237337,
-     "end_time": "2024-11-13T02:35:14.683205",
+     "duration": 6.885582,
+     "end_time": "2024-11-15T15:22:34.882164",
      "exception": false,
-     "start_time": "2024-11-13T02:35:12.445868",
+     "start_time": "2024-11-15T15:22:27.996582",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.10/site-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator OrdinalEncoder from version 1.5.2 when using version 1.2.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Specify the path where you want to save the serialized function\n",
     "catboost_artifacts_path = '/kaggle/input/mcts-artifacts/catboost_predict.pkl'\n",
@@ -110,19 +100,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "560fd1a4",
+   "id": "df7111f4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-13T02:35:14.694850Z",
-     "iopub.status.busy": "2024-11-13T02:35:14.694286Z",
-     "iopub.status.idle": "2024-11-13T02:35:14.707814Z",
-     "shell.execute_reply": "2024-11-13T02:35:14.706389Z"
+     "iopub.execute_input": "2024-11-15T15:22:34.894053Z",
+     "iopub.status.busy": "2024-11-15T15:22:34.892866Z",
+     "iopub.status.idle": "2024-11-15T15:22:34.909616Z",
+     "shell.execute_reply": "2024-11-15T15:22:34.908315Z"
     },
     "papermill": {
-     "duration": 0.023095,
-     "end_time": "2024-11-13T02:35:14.710980",
+     "duration": 0.025493,
+     "end_time": "2024-11-15T15:22:34.912353",
      "exception": false,
-     "start_time": "2024-11-13T02:35:14.687885",
+     "start_time": "2024-11-15T15:22:34.886860",
      "status": "completed"
     },
     "tags": []
@@ -139,21 +129,21 @@
    ],
    "source": [
     "class ModelInference:\n",
-    "    def __init__(self, models, numerical_cols, categorical_cols, text_cols, encoder, scaler):\n",
+    "    def __init__(self, models, numerical_cols, categorical_cols, encoder, scaler, text_cols=None):\n",
     "        \"\"\"Initialize inference class with trained artifacts\n",
     "        \n",
     "        Args:\n",
     "            models: List of trained CatBoost models\n",
     "            numerical_cols: List of numerical column names\n",
     "            categorical_cols: List of categorical column names\n",
-    "            text_cols: List of text columns\n",
     "            encoder: Fitted OrdinalEncoder for categorical features\n",
     "            scaler: Fitted StandardScaler for numerical features (optional)\n",
+    "            text_cols: List of text columns (optional)\n",
     "        \"\"\"\n",
     "        self.models = models\n",
     "        self.numerical_cols = numerical_cols\n",
     "        self.categorical_cols = categorical_cols\n",
-    "        self.text_cols = text_cols\n",
+    "        self.text_cols = text_cols if text_cols is not None else []\n",
     "        self.encoder = encoder\n",
     "        self.scaler = scaler\n",
     "\n",
@@ -175,15 +165,24 @@
     "            self.numerical_cols,\n",
     "            self.categorical_cols,\n",
     "            self.encoder,\n",
-    "            self.scaler\n",
+    "            self.scaler,\n",
+    "            include_position_features=True,\n",
+    "            include_text_features=True,\n",
     "        )\n",
     "        \n",
     "        # Create CatBoost Pool for test data\n",
-    "        test_pool = cb.Pool(\n",
-    "            data=test_processed[self.numerical_cols + self.categorical_cols + self.text_cols],\n",
-    "            cat_features=self.categorical_cols,\n",
-    "            text_features=self.text_cols,\n",
-    "        )\n",
+    "        features = self.numerical_cols + self.categorical_cols\n",
+    "        pool_params = {\n",
+    "            'data': test_processed[features],\n",
+    "            'cat_features': self.categorical_cols,\n",
+    "        }\n",
+    "        \n",
+    "        if self.text_cols:\n",
+    "            features += self.text_cols\n",
+    "            pool_params['data'] = test_processed[features]\n",
+    "            pool_params['text_features'] = self.text_cols\n",
+    "            \n",
+    "        test_pool = cb.Pool(**pool_params)\n",
     "        \n",
     "        # Get predictions from all models\n",
     "        predictions = np.mean([\n",
@@ -194,25 +193,36 @@
     "        \n",
     "        return predictions\n",
     "\n",
-    "model_catboost = ModelInference(text_cols=[\"LudRules\",], **catboost_artifacts)"
+    "# model_catboost = ModelInference(text_cols=[\"LudRules\",], **catboost_artifacts)\n",
+    "\n",
+    "model_catboost = ModelInference(\n",
+    "    models=catboost_artifacts[\"models\"][:5],\n",
+    "    # models=catboost_artifacts[\"models\"][5:10],\n",
+    "    # models=catboost_artifacts[\"models\"][10:],\n",
+    "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
+    "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
+    "    text_cols=[\"LudRules\"],\n",
+    "    encoder=catboost_artifacts[\"encoder\"],\n",
+    "    scaler=catboost_artifacts[\"scaler\"],\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "573077c3",
+   "id": "d8da4a04",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-13T02:35:14.722300Z",
-     "iopub.status.busy": "2024-11-13T02:35:14.721827Z",
-     "iopub.status.idle": "2024-11-13T02:35:14.994510Z",
-     "shell.execute_reply": "2024-11-13T02:35:14.993210Z"
+     "iopub.execute_input": "2024-11-15T15:22:34.923573Z",
+     "iopub.status.busy": "2024-11-15T15:22:34.923122Z",
+     "iopub.status.idle": "2024-11-15T15:22:35.211302Z",
+     "shell.execute_reply": "2024-11-15T15:22:35.210036Z"
     },
     "papermill": {
-     "duration": 0.281761,
-     "end_time": "2024-11-13T02:35:14.997429",
+     "duration": 0.296835,
+     "end_time": "2024-11-15T15:22:35.213900",
      "exception": false,
-     "start_time": "2024-11-13T02:35:14.715668",
+     "start_time": "2024-11-15T15:22:34.917065",
      "status": "completed"
     },
     "tags": []
@@ -237,13 +247,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5374e56b",
+   "id": "3a7c1530",
    "metadata": {
     "papermill": {
-     "duration": 0.004566,
-     "end_time": "2024-11-13T02:35:15.006975",
+     "duration": 0.00439,
+     "end_time": "2024-11-15T15:22:35.223066",
      "exception": false,
-     "start_time": "2024-11-13T02:35:15.002409",
+     "start_time": "2024-11-15T15:22:35.218676",
      "status": "completed"
     },
     "tags": []
@@ -256,19 +266,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a8a27ec2",
+   "id": "18eb9879",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-13T02:35:15.021306Z",
-     "iopub.status.busy": "2024-11-13T02:35:15.019807Z",
-     "iopub.status.idle": "2024-11-13T02:35:15.608341Z",
-     "shell.execute_reply": "2024-11-13T02:35:15.606974Z"
+     "iopub.execute_input": "2024-11-15T15:22:35.234339Z",
+     "iopub.status.busy": "2024-11-15T15:22:35.233904Z",
+     "iopub.status.idle": "2024-11-15T15:22:35.922117Z",
+     "shell.execute_reply": "2024-11-15T15:22:35.920856Z"
     },
     "papermill": {
-     "duration": 0.598723,
-     "end_time": "2024-11-13T02:35:15.611359",
+     "duration": 0.697163,
+     "end_time": "2024-11-15T15:22:35.924968",
      "exception": false,
-     "start_time": "2024-11-13T02:35:15.012636",
+     "start_time": "2024-11-15T15:22:35.227805",
      "status": "completed"
     },
     "tags": []
@@ -283,19 +293,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f2b99df6",
+   "id": "89374250",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-13T02:35:15.623288Z",
-     "iopub.status.busy": "2024-11-13T02:35:15.622666Z",
-     "iopub.status.idle": "2024-11-13T02:35:15.629360Z",
-     "shell.execute_reply": "2024-11-13T02:35:15.628081Z"
+     "iopub.execute_input": "2024-11-15T15:22:35.936676Z",
+     "iopub.status.busy": "2024-11-15T15:22:35.936060Z",
+     "iopub.status.idle": "2024-11-15T15:22:35.942799Z",
+     "shell.execute_reply": "2024-11-15T15:22:35.941452Z"
     },
     "papermill": {
-     "duration": 0.015814,
-     "end_time": "2024-11-13T02:35:15.632091",
+     "duration": 0.015881,
+     "end_time": "2024-11-15T15:22:35.945724",
      "exception": false,
-     "start_time": "2024-11-13T02:35:15.616277",
+     "start_time": "2024-11-15T15:22:35.929843",
      "status": "completed"
     },
     "tags": []
@@ -312,19 +322,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6db22205",
+   "id": "f946b3bf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-13T02:35:15.644095Z",
-     "iopub.status.busy": "2024-11-13T02:35:15.643588Z",
-     "iopub.status.idle": "2024-11-13T02:35:16.373334Z",
-     "shell.execute_reply": "2024-11-13T02:35:16.372032Z"
+     "iopub.execute_input": "2024-11-15T15:22:35.959043Z",
+     "iopub.status.busy": "2024-11-15T15:22:35.957796Z",
+     "iopub.status.idle": "2024-11-15T15:22:36.850692Z",
+     "shell.execute_reply": "2024-11-15T15:22:36.848871Z"
     },
     "papermill": {
-     "duration": 0.73937,
-     "end_time": "2024-11-13T02:35:16.376660",
+     "duration": 0.903684,
+     "end_time": "2024-11-15T15:22:36.854291",
      "exception": false,
-     "start_time": "2024-11-13T02:35:15.637290",
+     "start_time": "2024-11-15T15:22:35.950607",
      "status": "completed"
     },
     "tags": []
@@ -346,13 +356,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9bd7cb5",
+   "id": "2456b4c2",
    "metadata": {
     "papermill": {
-     "duration": 0.005549,
-     "end_time": "2024-11-13T02:35:16.387369",
+     "duration": 0.004633,
+     "end_time": "2024-11-15T15:22:36.864030",
      "exception": false,
-     "start_time": "2024-11-13T02:35:16.381820",
+     "start_time": "2024-11-15T15:22:36.859397",
      "status": "completed"
     },
     "tags": []
@@ -372,8 +382,9 @@
      "sourceType": "competition"
     },
     {
+     "databundleVersionId": 10175295,
      "datasetId": 5909723,
-     "sourceId": 9889688,
+     "sourceId": 9916850,
      "sourceType": "datasetVersion"
     }
    ],
@@ -402,14 +413,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.631283,
-   "end_time": "2024-11-13T02:35:17.216457",
+   "duration": 17.268687,
+   "end_time": "2024-11-15T15:22:37.793339",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-13T02:35:05.585174",
+   "start_time": "2024-11-15T15:22:20.524652",
    "version": "2.6.0"
   }
  },
