Kaggle Notebook | mcts-catboost-baseline | Version 10

--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "48a071af",
+   "id": "00b93e2e",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:22:24.082690Z",
-     "iopub.status.busy": "2024-11-15T15:22:24.081495Z",
-     "iopub.status.idle": "2024-11-15T15:22:27.980339Z",
-     "shell.execute_reply": "2024-11-15T15:22:27.979022Z"
+     "iopub.execute_input": "2024-11-15T15:22:51.275501Z",
+     "iopub.status.busy": "2024-11-15T15:22:51.275071Z",
+     "iopub.status.idle": "2024-11-15T15:22:54.314985Z",
+     "shell.execute_reply": "2024-11-15T15:22:54.313750Z"
     },
     "papermill": {
-     "duration": 3.908513,
-     "end_time": "2024-11-15T15:22:27.983097",
+     "duration": 3.048335,
+     "end_time": "2024-11-15T15:22:54.318078",
      "exception": false,
-     "start_time": "2024-11-15T15:22:24.074584",
+     "start_time": "2024-11-15T15:22:51.269743",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfe06203",
+   "id": "e1143e0a",
    "metadata": {
     "papermill": {
-     "duration": 0.004182,
-     "end_time": "2024-11-15T15:22:27.992094",
+     "duration": 0.003031,
+     "end_time": "2024-11-15T15:22:54.324720",
      "exception": false,
-     "start_time": "2024-11-15T15:22:27.987912",
+     "start_time": "2024-11-15T15:22:54.321689",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2726038d",
+   "id": "23c7af89",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:22:28.003083Z",
-     "iopub.status.busy": "2024-11-15T15:22:28.002431Z",
-     "iopub.status.idle": "2024-11-15T15:22:34.879304Z",
-     "shell.execute_reply": "2024-11-15T15:22:34.878108Z"
+     "iopub.execute_input": "2024-11-15T15:22:54.332933Z",
+     "iopub.status.busy": "2024-11-15T15:22:54.332396Z",
+     "iopub.status.idle": "2024-11-15T15:23:00.360728Z",
+     "shell.execute_reply": "2024-11-15T15:23:00.359277Z"
     },
     "papermill": {
-     "duration": 6.885582,
-     "end_time": "2024-11-15T15:22:34.882164",
+     "duration": 6.035736,
+     "end_time": "2024-11-15T15:23:00.363694",
      "exception": false,
-     "start_time": "2024-11-15T15:22:27.996582",
+     "start_time": "2024-11-15T15:22:54.327958",
      "status": "completed"
     },
     "tags": []
@@ -100,19 +100,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "df7111f4",
+   "id": "0fd5556f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:22:34.894053Z",
-     "iopub.status.busy": "2024-11-15T15:22:34.892866Z",
-     "iopub.status.idle": "2024-11-15T15:22:34.909616Z",
-     "shell.execute_reply": "2024-11-15T15:22:34.908315Z"
+     "iopub.execute_input": "2024-11-15T15:23:00.373389Z",
+     "iopub.status.busy": "2024-11-15T15:23:00.372351Z",
+     "iopub.status.idle": "2024-11-15T15:23:00.385017Z",
+     "shell.execute_reply": "2024-11-15T15:23:00.383882Z"
     },
     "papermill": {
-     "duration": 0.025493,
-     "end_time": "2024-11-15T15:22:34.912353",
+     "duration": 0.019927,
+     "end_time": "2024-11-15T15:23:00.387430",
      "exception": false,
-     "start_time": "2024-11-15T15:22:34.886860",
+     "start_time": "2024-11-15T15:23:00.367503",
      "status": "completed"
     },
     "tags": []
@@ -196,9 +196,9 @@
     "# model_catboost = ModelInference(text_cols=[\"LudRules\",], **catboost_artifacts)\n",
     "\n",
     "model_catboost = ModelInference(\n",
-    "    models=catboost_artifacts[\"models\"][:5],\n",
+    "    # models=catboost_artifacts[\"models\"][:5],\n",
     "    # models=catboost_artifacts[\"models\"][5:10],\n",
-    "    # models=catboost_artifacts[\"models\"][10:],\n",
+    "    models=catboost_artifacts[\"models\"][10:],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
     "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
     "    text_cols=[\"LudRules\"],\n",
@@ -210,19 +210,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d8da4a04",
+   "id": "c375313c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:22:34.923573Z",
-     "iopub.status.busy": "2024-11-15T15:22:34.923122Z",
-     "iopub.status.idle": "2024-11-15T15:22:35.211302Z",
-     "shell.execute_reply": "2024-11-15T15:22:35.210036Z"
+     "iopub.execute_input": "2024-11-15T15:23:00.395702Z",
+     "iopub.status.busy": "2024-11-15T15:23:00.395299Z",
+     "iopub.status.idle": "2024-11-15T15:23:00.635482Z",
+     "shell.execute_reply": "2024-11-15T15:23:00.634245Z"
     },
     "papermill": {
-     "duration": 0.296835,
-     "end_time": "2024-11-15T15:22:35.213900",
+     "duration": 0.24717,
+     "end_time": "2024-11-15T15:23:00.637954",
      "exception": false,
-     "start_time": "2024-11-15T15:22:34.917065",
+     "start_time": "2024-11-15T15:23:00.390784",
      "status": "completed"
     },
     "tags": []
@@ -231,7 +231,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.12990531, -0.17131387, -0.01485499])"
+       "array([ 0.14868477, -0.18764897, -0.05139884])"
       ]
      },
      "execution_count": 4,
@@ -247,13 +247,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a7c1530",
+   "id": "b48b049b",
    "metadata": {
     "papermill": {
-     "duration": 0.00439,
-     "end_time": "2024-11-15T15:22:35.223066",
+     "duration": 0.003197,
+     "end_time": "2024-11-15T15:23:00.644714",
      "exception": false,
-     "start_time": "2024-11-15T15:22:35.218676",
+     "start_time": "2024-11-15T15:23:00.641517",
      "status": "completed"
     },
     "tags": []
@@ -266,19 +266,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "18eb9879",
+   "id": "4dbb9d08",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:22:35.234339Z",
-     "iopub.status.busy": "2024-11-15T15:22:35.233904Z",
-     "iopub.status.idle": "2024-11-15T15:22:35.922117Z",
-     "shell.execute_reply": "2024-11-15T15:22:35.920856Z"
+     "iopub.execute_input": "2024-11-15T15:23:00.653336Z",
+     "iopub.status.busy": "2024-11-15T15:23:00.652911Z",
+     "iopub.status.idle": "2024-11-15T15:23:01.197475Z",
+     "shell.execute_reply": "2024-11-15T15:23:01.196174Z"
     },
     "papermill": {
-     "duration": 0.697163,
-     "end_time": "2024-11-15T15:22:35.924968",
+     "duration": 0.551932,
+     "end_time": "2024-11-15T15:23:01.200169",
      "exception": false,
-     "start_time": "2024-11-15T15:22:35.227805",
+     "start_time": "2024-11-15T15:23:00.648237",
      "status": "completed"
     },
     "tags": []
@@ -293,19 +293,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "89374250",
+   "id": "d0d3224a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:22:35.936676Z",
-     "iopub.status.busy": "2024-11-15T15:22:35.936060Z",
-     "iopub.status.idle": "2024-11-15T15:22:35.942799Z",
-     "shell.execute_reply": "2024-11-15T15:22:35.941452Z"
+     "iopub.execute_input": "2024-11-15T15:23:01.209257Z",
+     "iopub.status.busy": "2024-11-15T15:23:01.208676Z",
+     "iopub.status.idle": "2024-11-15T15:23:01.214991Z",
+     "shell.execute_reply": "2024-11-15T15:23:01.213879Z"
     },
     "papermill": {
-     "duration": 0.015881,
-     "end_time": "2024-11-15T15:22:35.945724",
+     "duration": 0.013648,
+     "end_time": "2024-11-15T15:23:01.217499",
      "exception": false,
-     "start_time": "2024-11-15T15:22:35.929843",
+     "start_time": "2024-11-15T15:23:01.203851",
      "status": "completed"
     },
     "tags": []
@@ -322,19 +322,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f946b3bf",
+   "id": "3cfe45fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:22:35.959043Z",
-     "iopub.status.busy": "2024-11-15T15:22:35.957796Z",
-     "iopub.status.idle": "2024-11-15T15:22:36.850692Z",
-     "shell.execute_reply": "2024-11-15T15:22:36.848871Z"
+     "iopub.execute_input": "2024-11-15T15:23:01.226979Z",
+     "iopub.status.busy": "2024-11-15T15:23:01.226544Z",
+     "iopub.status.idle": "2024-11-15T15:23:02.005114Z",
+     "shell.execute_reply": "2024-11-15T15:23:02.003685Z"
     },
     "papermill": {
-     "duration": 0.903684,
-     "end_time": "2024-11-15T15:22:36.854291",
+     "duration": 0.786419,
+     "end_time": "2024-11-15T15:23:02.007937",
      "exception": false,
-     "start_time": "2024-11-15T15:22:35.950607",
+     "start_time": "2024-11-15T15:23:01.221518",
      "status": "completed"
     },
     "tags": []
@@ -356,13 +356,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2456b4c2",
+   "id": "3dc314e6",
    "metadata": {
     "papermill": {
-     "duration": 0.004633,
-     "end_time": "2024-11-15T15:22:36.864030",
+     "duration": 0.00358,
+     "end_time": "2024-11-15T15:23:02.015319",
      "exception": false,
-     "start_time": "2024-11-15T15:22:36.859397",
+     "start_time": "2024-11-15T15:23:02.011739",
      "status": "completed"
     },
     "tags": []
@@ -413,14 +413,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 17.268687,
-   "end_time": "2024-11-15T15:22:37.793339",
+   "duration": 14.425116,
+   "end_time": "2024-11-15T15:23:02.841937",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-15T15:22:20.524652",
+   "start_time": "2024-11-15T15:22:48.416821",
    "version": "2.6.0"
   }
  },
