Kaggle Notebook | mcts-catboost-baseline | Version 11

--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "00b93e2e",
+   "id": "f85dc343",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:22:51.275501Z",
-     "iopub.status.busy": "2024-11-15T15:22:51.275071Z",
-     "iopub.status.idle": "2024-11-15T15:22:54.314985Z",
-     "shell.execute_reply": "2024-11-15T15:22:54.313750Z"
+     "iopub.execute_input": "2024-11-15T15:23:40.960431Z",
+     "iopub.status.busy": "2024-11-15T15:23:40.960001Z",
+     "iopub.status.idle": "2024-11-15T15:23:43.977769Z",
+     "shell.execute_reply": "2024-11-15T15:23:43.976547Z"
     },
     "papermill": {
-     "duration": 3.048335,
-     "end_time": "2024-11-15T15:22:54.318078",
+     "duration": 3.027692,
+     "end_time": "2024-11-15T15:23:43.980833",
      "exception": false,
-     "start_time": "2024-11-15T15:22:51.269743",
+     "start_time": "2024-11-15T15:23:40.953141",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1143e0a",
+   "id": "9a50d47b",
    "metadata": {
     "papermill": {
-     "duration": 0.003031,
-     "end_time": "2024-11-15T15:22:54.324720",
+     "duration": 0.004111,
+     "end_time": "2024-11-15T15:23:43.989664",
      "exception": false,
-     "start_time": "2024-11-15T15:22:54.321689",
+     "start_time": "2024-11-15T15:23:43.985553",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "23c7af89",
+   "id": "45a2d54e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:22:54.332933Z",
-     "iopub.status.busy": "2024-11-15T15:22:54.332396Z",
-     "iopub.status.idle": "2024-11-15T15:23:00.360728Z",
-     "shell.execute_reply": "2024-11-15T15:23:00.359277Z"
+     "iopub.execute_input": "2024-11-15T15:23:44.000778Z",
+     "iopub.status.busy": "2024-11-15T15:23:44.000178Z",
+     "iopub.status.idle": "2024-11-15T15:23:51.050353Z",
+     "shell.execute_reply": "2024-11-15T15:23:51.049312Z"
     },
     "papermill": {
-     "duration": 6.035736,
-     "end_time": "2024-11-15T15:23:00.363694",
+     "duration": 7.0592,
+     "end_time": "2024-11-15T15:23:51.053295",
      "exception": false,
-     "start_time": "2024-11-15T15:22:54.327958",
+     "start_time": "2024-11-15T15:23:43.994095",
      "status": "completed"
     },
     "tags": []
@@ -100,19 +100,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0fd5556f",
+   "id": "f1549ab6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:00.373389Z",
-     "iopub.status.busy": "2024-11-15T15:23:00.372351Z",
-     "iopub.status.idle": "2024-11-15T15:23:00.385017Z",
-     "shell.execute_reply": "2024-11-15T15:23:00.383882Z"
+     "iopub.execute_input": "2024-11-15T15:23:51.064659Z",
+     "iopub.status.busy": "2024-11-15T15:23:51.063943Z",
+     "iopub.status.idle": "2024-11-15T15:23:51.078448Z",
+     "shell.execute_reply": "2024-11-15T15:23:51.077371Z"
     },
     "papermill": {
-     "duration": 0.019927,
-     "end_time": "2024-11-15T15:23:00.387430",
+     "duration": 0.022785,
+     "end_time": "2024-11-15T15:23:51.080826",
      "exception": false,
-     "start_time": "2024-11-15T15:23:00.367503",
+     "start_time": "2024-11-15T15:23:51.058041",
      "status": "completed"
     },
     "tags": []
@@ -198,7 +198,8 @@
     "model_catboost = ModelInference(\n",
     "    # models=catboost_artifacts[\"models\"][:5],\n",
     "    # models=catboost_artifacts[\"models\"][5:10],\n",
-    "    models=catboost_artifacts[\"models\"][10:],\n",
+    "    # models=catboost_artifacts[\"models\"][10:],\n",
+    "    models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
     "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
     "    text_cols=[\"LudRules\"],\n",
@@ -210,19 +211,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c375313c",
+   "id": "b9bd2375",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:00.395702Z",
-     "iopub.status.busy": "2024-11-15T15:23:00.395299Z",
-     "iopub.status.idle": "2024-11-15T15:23:00.635482Z",
-     "shell.execute_reply": "2024-11-15T15:23:00.634245Z"
+     "iopub.execute_input": "2024-11-15T15:23:51.091252Z",
+     "iopub.status.busy": "2024-11-15T15:23:51.090842Z",
+     "iopub.status.idle": "2024-11-15T15:23:51.390351Z",
+     "shell.execute_reply": "2024-11-15T15:23:51.389164Z"
     },
     "papermill": {
-     "duration": 0.24717,
-     "end_time": "2024-11-15T15:23:00.637954",
+     "duration": 0.307726,
+     "end_time": "2024-11-15T15:23:51.392984",
      "exception": false,
-     "start_time": "2024-11-15T15:23:00.390784",
+     "start_time": "2024-11-15T15:23:51.085258",
      "status": "completed"
     },
     "tags": []
@@ -231,7 +232,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.14868477, -0.18764897, -0.05139884])"
+       "array([ 0.1354931 , -0.16949624, -0.03478131])"
       ]
      },
      "execution_count": 4,
@@ -247,13 +248,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b48b049b",
+   "id": "9a5f2563",
    "metadata": {
     "papermill": {
-     "duration": 0.003197,
-     "end_time": "2024-11-15T15:23:00.644714",
+     "duration": 0.004309,
+     "end_time": "2024-11-15T15:23:51.402276",
      "exception": false,
-     "start_time": "2024-11-15T15:23:00.641517",
+     "start_time": "2024-11-15T15:23:51.397967",
      "status": "completed"
     },
     "tags": []
@@ -266,19 +267,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4dbb9d08",
+   "id": "8b58e2cd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:00.653336Z",
-     "iopub.status.busy": "2024-11-15T15:23:00.652911Z",
-     "iopub.status.idle": "2024-11-15T15:23:01.197475Z",
-     "shell.execute_reply": "2024-11-15T15:23:01.196174Z"
+     "iopub.execute_input": "2024-11-15T15:23:51.413270Z",
+     "iopub.status.busy": "2024-11-15T15:23:51.412780Z",
+     "iopub.status.idle": "2024-11-15T15:23:51.930846Z",
+     "shell.execute_reply": "2024-11-15T15:23:51.929561Z"
     },
     "papermill": {
-     "duration": 0.551932,
-     "end_time": "2024-11-15T15:23:01.200169",
+     "duration": 0.527,
+     "end_time": "2024-11-15T15:23:51.933750",
      "exception": false,
-     "start_time": "2024-11-15T15:23:00.648237",
+     "start_time": "2024-11-15T15:23:51.406750",
      "status": "completed"
     },
     "tags": []
@@ -293,19 +294,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d0d3224a",
+   "id": "53eafd62",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:01.209257Z",
-     "iopub.status.busy": "2024-11-15T15:23:01.208676Z",
-     "iopub.status.idle": "2024-11-15T15:23:01.214991Z",
-     "shell.execute_reply": "2024-11-15T15:23:01.213879Z"
+     "iopub.execute_input": "2024-11-15T15:23:51.945431Z",
+     "iopub.status.busy": "2024-11-15T15:23:51.944262Z",
+     "iopub.status.idle": "2024-11-15T15:23:51.950314Z",
+     "shell.execute_reply": "2024-11-15T15:23:51.949331Z"
     },
     "papermill": {
-     "duration": 0.013648,
-     "end_time": "2024-11-15T15:23:01.217499",
+     "duration": 0.014182,
+     "end_time": "2024-11-15T15:23:51.952685",
      "exception": false,
-     "start_time": "2024-11-15T15:23:01.203851",
+     "start_time": "2024-11-15T15:23:51.938503",
      "status": "completed"
     },
     "tags": []
@@ -322,19 +323,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3cfe45fb",
+   "id": "f710264f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:01.226979Z",
-     "iopub.status.busy": "2024-11-15T15:23:01.226544Z",
-     "iopub.status.idle": "2024-11-15T15:23:02.005114Z",
-     "shell.execute_reply": "2024-11-15T15:23:02.003685Z"
+     "iopub.execute_input": "2024-11-15T15:23:51.963500Z",
+     "iopub.status.busy": "2024-11-15T15:23:51.963106Z",
+     "iopub.status.idle": "2024-11-15T15:23:52.755473Z",
+     "shell.execute_reply": "2024-11-15T15:23:52.754414Z"
     },
     "papermill": {
-     "duration": 0.786419,
-     "end_time": "2024-11-15T15:23:02.007937",
+     "duration": 0.80107,
+     "end_time": "2024-11-15T15:23:52.758305",
      "exception": false,
-     "start_time": "2024-11-15T15:23:01.221518",
+     "start_time": "2024-11-15T15:23:51.957235",
      "status": "completed"
     },
     "tags": []
@@ -356,13 +357,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dc314e6",
+   "id": "3ebb5846",
    "metadata": {
     "papermill": {
-     "duration": 0.00358,
-     "end_time": "2024-11-15T15:23:02.015319",
+     "duration": 0.004182,
+     "end_time": "2024-11-15T15:23:52.767215",
      "exception": false,
-     "start_time": "2024-11-15T15:23:02.011739",
+     "start_time": "2024-11-15T15:23:52.763033",
      "status": "completed"
     },
     "tags": []
@@ -413,14 +414,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 14.425116,
-   "end_time": "2024-11-15T15:23:02.841937",
+   "duration": 15.656985,
+   "end_time": "2024-11-15T15:23:53.594360",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-15T15:22:48.416821",
+   "start_time": "2024-11-15T15:23:37.937375",
    "version": "2.6.0"
   }
  },
