--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f85dc343",
+   "id": "690ee922",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:40.960431Z",
-     "iopub.status.busy": "2024-11-15T15:23:40.960001Z",
-     "iopub.status.idle": "2024-11-15T15:23:43.977769Z",
-     "shell.execute_reply": "2024-11-15T15:23:43.976547Z"
+     "iopub.execute_input": "2024-11-15T15:23:41.653281Z",
+     "iopub.status.busy": "2024-11-15T15:23:41.652836Z",
+     "iopub.status.idle": "2024-11-15T15:23:45.019266Z",
+     "shell.execute_reply": "2024-11-15T15:23:45.017943Z"
     },
     "papermill": {
-     "duration": 3.027692,
-     "end_time": "2024-11-15T15:23:43.980833",
+     "duration": 3.376274,
+     "end_time": "2024-11-15T15:23:45.022642",
      "exception": false,
-     "start_time": "2024-11-15T15:23:40.953141",
+     "start_time": "2024-11-15T15:23:41.646368",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a50d47b",
+   "id": "97e6be17",
    "metadata": {
     "papermill": {
-     "duration": 0.004111,
-     "end_time": "2024-11-15T15:23:43.989664",
+     "duration": 0.004057,
+     "end_time": "2024-11-15T15:23:45.031427",
      "exception": false,
-     "start_time": "2024-11-15T15:23:43.985553",
+     "start_time": "2024-11-15T15:23:45.027370",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "45a2d54e",
+   "id": "8e06f01e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:44.000778Z",
-     "iopub.status.busy": "2024-11-15T15:23:44.000178Z",
-     "iopub.status.idle": "2024-11-15T15:23:51.050353Z",
-     "shell.execute_reply": "2024-11-15T15:23:51.049312Z"
+     "iopub.execute_input": "2024-11-15T15:23:45.042706Z",
+     "iopub.status.busy": "2024-11-15T15:23:45.041565Z",
+     "iopub.status.idle": "2024-11-15T15:23:52.017133Z",
+     "shell.execute_reply": "2024-11-15T15:23:52.015935Z"
     },
     "papermill": {
-     "duration": 7.0592,
-     "end_time": "2024-11-15T15:23:51.053295",
+     "duration": 6.984389,
+     "end_time": "2024-11-15T15:23:52.020238",
      "exception": false,
-     "start_time": "2024-11-15T15:23:43.994095",
+     "start_time": "2024-11-15T15:23:45.035849",
      "status": "completed"
     },
     "tags": []
@@ -100,19 +100,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f1549ab6",
+   "id": "5575344d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:51.064659Z",
-     "iopub.status.busy": "2024-11-15T15:23:51.063943Z",
-     "iopub.status.idle": "2024-11-15T15:23:51.078448Z",
-     "shell.execute_reply": "2024-11-15T15:23:51.077371Z"
+     "iopub.execute_input": "2024-11-15T15:23:52.031633Z",
+     "iopub.status.busy": "2024-11-15T15:23:52.031163Z",
+     "iopub.status.idle": "2024-11-15T15:23:52.047732Z",
+     "shell.execute_reply": "2024-11-15T15:23:52.046397Z"
     },
     "papermill": {
-     "duration": 0.022785,
-     "end_time": "2024-11-15T15:23:51.080826",
+     "duration": 0.02539,
+     "end_time": "2024-11-15T15:23:52.050272",
      "exception": false,
-     "start_time": "2024-11-15T15:23:51.058041",
+     "start_time": "2024-11-15T15:23:52.024882",
      "status": "completed"
     },
     "tags": []
@@ -197,9 +197,8 @@
     "\n",
     "model_catboost = ModelInference(\n",
     "    # models=catboost_artifacts[\"models\"][:5],\n",
-    "    # models=catboost_artifacts[\"models\"][5:10],\n",
+    "    models=catboost_artifacts[\"models\"][5:10],\n",
     "    # models=catboost_artifacts[\"models\"][10:],\n",
-    "    models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
     "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
     "    text_cols=[\"LudRules\"],\n",
@@ -211,19 +210,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b9bd2375",
+   "id": "a121960b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:51.091252Z",
-     "iopub.status.busy": "2024-11-15T15:23:51.090842Z",
-     "iopub.status.idle": "2024-11-15T15:23:51.390351Z",
-     "shell.execute_reply": "2024-11-15T15:23:51.389164Z"
+     "iopub.execute_input": "2024-11-15T15:23:52.061806Z",
+     "iopub.status.busy": "2024-11-15T15:23:52.060754Z",
+     "iopub.status.idle": "2024-11-15T15:23:52.331804Z",
+     "shell.execute_reply": "2024-11-15T15:23:52.330641Z"
     },
     "papermill": {
-     "duration": 0.307726,
-     "end_time": "2024-11-15T15:23:51.392984",
+     "duration": 0.279666,
+     "end_time": "2024-11-15T15:23:52.334443",
      "exception": false,
-     "start_time": "2024-11-15T15:23:51.085258",
+     "start_time": "2024-11-15T15:23:52.054777",
      "status": "completed"
     },
     "tags": []
@@ -232,7 +231,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.1354931 , -0.16949624, -0.03478131])"
+       "array([ 0.12788921, -0.14952589, -0.03809009])"
       ]
      },
      "execution_count": 4,
@@ -248,13 +247,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a5f2563",
+   "id": "5cd74c83",
    "metadata": {
     "papermill": {
-     "duration": 0.004309,
-     "end_time": "2024-11-15T15:23:51.402276",
+     "duration": 0.004397,
+     "end_time": "2024-11-15T15:23:52.343535",
      "exception": false,
-     "start_time": "2024-11-15T15:23:51.397967",
+     "start_time": "2024-11-15T15:23:52.339138",
      "status": "completed"
     },
     "tags": []
@@ -267,19 +266,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8b58e2cd",
+   "id": "6014d356",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:51.413270Z",
-     "iopub.status.busy": "2024-11-15T15:23:51.412780Z",
-     "iopub.status.idle": "2024-11-15T15:23:51.930846Z",
-     "shell.execute_reply": "2024-11-15T15:23:51.929561Z"
+     "iopub.execute_input": "2024-11-15T15:23:52.355259Z",
+     "iopub.status.busy": "2024-11-15T15:23:52.354359Z",
+     "iopub.status.idle": "2024-11-15T15:23:52.942809Z",
+     "shell.execute_reply": "2024-11-15T15:23:52.941631Z"
     },
     "papermill": {
-     "duration": 0.527,
-     "end_time": "2024-11-15T15:23:51.933750",
+     "duration": 0.597391,
+     "end_time": "2024-11-15T15:23:52.945748",
      "exception": false,
-     "start_time": "2024-11-15T15:23:51.406750",
+     "start_time": "2024-11-15T15:23:52.348357",
      "status": "completed"
     },
     "tags": []
@@ -294,19 +293,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "53eafd62",
+   "id": "dafb6692",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:51.945431Z",
-     "iopub.status.busy": "2024-11-15T15:23:51.944262Z",
-     "iopub.status.idle": "2024-11-15T15:23:51.950314Z",
-     "shell.execute_reply": "2024-11-15T15:23:51.949331Z"
+     "iopub.execute_input": "2024-11-15T15:23:52.957059Z",
+     "iopub.status.busy": "2024-11-15T15:23:52.956432Z",
+     "iopub.status.idle": "2024-11-15T15:23:52.962673Z",
+     "shell.execute_reply": "2024-11-15T15:23:52.961651Z"
     },
     "papermill": {
-     "duration": 0.014182,
-     "end_time": "2024-11-15T15:23:51.952685",
+     "duration": 0.01466,
+     "end_time": "2024-11-15T15:23:52.965143",
      "exception": false,
-     "start_time": "2024-11-15T15:23:51.938503",
+     "start_time": "2024-11-15T15:23:52.950483",
      "status": "completed"
     },
     "tags": []
@@ -323,19 +322,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f710264f",
+   "id": "9852e43f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-15T15:23:51.963500Z",
-     "iopub.status.busy": "2024-11-15T15:23:51.963106Z",
-     "iopub.status.idle": "2024-11-15T15:23:52.755473Z",
-     "shell.execute_reply": "2024-11-15T15:23:52.754414Z"
+     "iopub.execute_input": "2024-11-15T15:23:52.976395Z",
+     "iopub.status.busy": "2024-11-15T15:23:52.975989Z",
+     "iopub.status.idle": "2024-11-15T15:23:53.792161Z",
+     "shell.execute_reply": "2024-11-15T15:23:53.790999Z"
     },
     "papermill": {
-     "duration": 0.80107,
-     "end_time": "2024-11-15T15:23:52.758305",
+     "duration": 0.825269,
+     "end_time": "2024-11-15T15:23:53.795107",
      "exception": false,
-     "start_time": "2024-11-15T15:23:51.957235",
+     "start_time": "2024-11-15T15:23:52.969838",
      "status": "completed"
     },
     "tags": []
@@ -357,13 +356,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ebb5846",
+   "id": "00172371",
    "metadata": {
     "papermill": {
-     "duration": 0.004182,
-     "end_time": "2024-11-15T15:23:52.767215",
+     "duration": 0.004402,
+     "end_time": "2024-11-15T15:23:53.804392",
      "exception": false,
-     "start_time": "2024-11-15T15:23:52.763033",
+     "start_time": "2024-11-15T15:23:53.799990",
      "status": "completed"
     },
     "tags": []
@@ -414,14 +413,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 15.656985,
-   "end_time": "2024-11-15T15:23:53.594360",
+   "duration": 16.146916,
+   "end_time": "2024-11-15T15:23:54.631915",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-15T15:23:37.937375",
+   "start_time": "2024-11-15T15:23:38.484999",
    "version": "2.6.0"
   }
  },
